
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2016-07-07 niel
	Add: Create new bootstrap file ).../bootstrap.php) to enable nzedb and lithium's app libraries to load together.
		 New files should use it as the base require_once instead of indexer.php. Old file will be
		converted over when it is convenient.
	Fix: Switch tmux start script to use new bootstrap file (Fixes issue #2205).
2016-07-06 niel
	Fix: Other category not available on new installs, due to insert query still using 'category' table.
	Add: Included lithium app into the autoload process. All of its classes should now be
		available to nZEDb (Closes issue #2205)
2016-07-04 DariusIII
	Fix: Malformed RSS for my movies and my shows RSS
2016-07-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.2.


2016-06-30 niel
	Chg: Make screen simple-expanded script executable.
2016-06-30 DariusIII
	Fix: Wrong path to file extension icons in Gamma theme viewfilelist.tpl
2016-06-27 b3rs3rk
	Mrg: PR 2175 - Cleanup groups
	Mrg: PR 2183 - Remove 10-tvrage_titles.tsv and scripts used to pupulate that table.
2016-06-27 DariusIII
	Fix: Missed occurences of categoryid in UserMovies.php. Fixes issue #2191
2016-06-27 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x.


2016-06-24 niel
	Mrg: PR 2189, from josh4trunks - Fix Lithium Connections to send host:name in host field as Lithium expects.
2016-06-24 DariusIII
	Chg: Remove release searchname from Gamma profile page (comments part)
	Chg: Reformat getCommentsRange query in ReleaseComments class
	Fix: Forums on Gamma (fixes issue #2174), Charisma, Gentele and Omicron themes.
	Fix: Triggers in schema (fixes issue #2184)
	Chg: Move child forking settings inside if else loop