@@ -7,7 +7,7 @@
  * It will start the tmux server and monitoring scripts if needed.
  */
 //require_once realpath(dirname(dirname(dirname(dirname(__DIR__)))) . DIRECTORY_SEPARATOR . 'indexer.php');
-require_once realpath(dirname(dirname(dirname(dirname(__DIR__)))) . DIRECTORY_SEPARATOR . 'bootstrap.php');
+require_once realpath(dirname(dirname(dirname(dirname(__DIR__)))) . DIRECTORY_SEPARATOR . 'nzedb' . DIRECTORY_SEPARATOR .'bootstrap.php');
 
 use nzedb\Tmux;
 use nzedb\db\Settings;
